2018-xx-xx - 2.3.3
-------------------------------
- Fixed time display format to selected in WordPress options.
- Improved Object Cache clear.

2018-06-12 - 2.3.2
-------------------------------
- Added an option to force load Appointment's scripts and styles.
- Added a limit for "Service Capacity" on a service add and edit screen to the number of defined workers.
- Fixed a problem with appointment hour when a worker was not selected.
- Fixed a problem with more than one Service Provider on schedule table, when first is already busy, but second is not.
- Fixed a problem with service description when Service is not selected.
- Fixed problems with capacity.
- Improved adding a new service provider, when is only one service it will be checked by default.
- Improved column "Price".
- Improved Service "Service Capacity" edit field.
- Excluded "removed" and "completed" statuses from is_busy() calculations.
- Added asterisk to GDPR checkbox label on appointment form.

2018-05-31 - 2.3.1
-------------------------------
- Fixed problem with adding workers if "Worker Locations" addon is active.

2018-05-24 - 2.3.0
-------------------------------
- Convert "Time base" on "Time Settings" to human readable. Props for David @ BBS.
- Fixed a problem with not available calendars on Service Provider profile.
- GDPR: Added ability to delete older appointments. You can set up how long presents appointments should be stored in the database.
- GDPR: Added ability to erase user personal data.
- GDPR: Added ability to export user personal data.
- GDPR: Added checkbox with the agreement to process personal data.
- GDPR: Added plugin information to default "Private Policy" page during auto-creation of this page.
- Improved few translation strings.
- Improved UX on "Payments" tab for MarketPress integration.
- Improved "Working Hours" and "Exceptions" tabs content on mobile devices.
- Refactored "Services" screen and use WP_List_Table class for the list.